examples/test/testpolicy570.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy570
  namespace: namespace285
spec:
  podSelector:
    matchLabels:
      key18: value47
      key34: value6
      key41: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value21
      podSelector:
        matchLabels:
          key47: value20
